# konversation

./: CMakeLists.txt  konversation_1.1.75+svn968012.orig.tar.gz.delta  konversation_1.1.75+svn968012.orig.tar.gz.id  konversation_1.1.75+svn969816.orig.tar.gz.delta  konversation_1.1.75+svn969816.orig.tar.gz.id  konversation_1.2.1.orig.tar.bz2.delta  konversation_1.2.1.orig.tar.bz2.id  konversation_1.2.2.orig.tar.bz2.delta  konversation_1.2.2.orig.tar.bz2.id  konversation_1.2.3.orig.tar.bz2.delta  konversation_1.2.3.orig.tar.bz2.id  konversation_1.2.orig.tar.gz.delta  konversation_1.2.orig.tar.gz.id  konversation_1.2~alpha1.orig.tar.gz.delta  konversation_1.2~alpha1.orig.tar.gz.id  konversation_1.2~alpha2.orig.tar.gz.delta  konversation_1.2~alpha2.orig.tar.gz.id  konversation_1.2~alpha3.orig.tar.gz.delta  konversation_1.2~alpha3.orig.tar.gz.id  konversation_1.2~alpha4.orig.tar.gz.delta  konversation_1.2~alpha4.orig.tar.gz.id  konversation_1.2~alpha5.orig.tar.gz.delta  konversation_1.2~alpha5.orig.tar.gz.id  konversation_1.2~alpha6.orig.tar.gz.delta  konversation_1.2~alpha6.orig.tar.gz.id  konversation_1.2~beta1.orig.tar.gz.delta  konversation_1.2~beta1.orig.tar.gz.id  konversation_1.2~rc1.orig.tar.gz.delta  konversation_1.2~rc1.orig.tar.gz.id  konversation_1.3.1+git457.g8b28316.orig.tar.bz2.delta  konversation_1.3.1+git457.g8b28316.orig.tar.bz2.id  konversation_1.3.1.orig.tar.bz2.delta  konversation_1.3.1.orig.tar.bz2.id  konversation_1.3~beta1.orig.tar.bz2.delta  konversation_1.3~beta1.orig.tar.bz2.id  konversation_1.3~~git221~g2a0818f.orig.tar.bz2.delta  konversation_1.3~~git221~g2a0818f.orig.tar.bz2.id  konversation_1.4.orig.tar.xz.delta  konversation_1.4.orig.tar.xz.id  konversation_1.5.orig.tar.xz.delta  (+3 more)
doc-translations/: CMakeLists.txt
po/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
po/ar/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/bg/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/br/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/bs/: konversation.po
po/ca/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/ca@valencia/: konversation.po
po/cs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/cy/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/da/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/de/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/el/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/en_GB/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/eo/: konversation.po
po/es/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/et/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/fi/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/fr/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/ga/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/gl/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/he/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/hi/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/hr/: konversation.po
po/hu/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/is/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/it/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/ja/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/ka/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/kk/: konversation.po
po/km/: konversation.po
po/ko/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/lt/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/ms/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/mt/: CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/nb/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  konversation.po
po/nds/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  (+1 more)
(+143 files in other folders)
