find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)

add_subdirectory( bg )
add_subdirectory( nb )
add_subdirectory( ms )
add_subdirectory( pl )
add_subdirectory( ta )
add_subdirectory( lt )
add_subdirectory( cy )
add_subdirectory( sk )
add_subdirectory( pt_BR )
add_subdirectory( hu )
add_subdirectory( zh_CN )
add_subdirectory( sr@ijekavian )
add_subdirectory( en_GB )
add_subdirectory( sr@ijekavianlatin )
add_subdirectory( ru )
add_subdirectory( es )
add_subdirectory( de )
add_subdirectory( sv )
add_subdirectory( km )
add_subdirectory( ro )
add_subdirectory( ko )
add_subdirectory( mt )
add_subdirectory( pa )
add_subdirectory( he )
add_subdirectory( sr )
add_subdirectory( ca )
add_subdirectory( zh_TW )
add_subdirectory( it )
add_subdirectory( uk )
add_subdirectory( ka )
add_subdirectory( sl )
add_subdirectory( hr )
add_subdirectory( br )
add_subdirectory( eo )
add_subdirectory( nl )
add_subdirectory( pt )
add_subdirectory( si )
add_subdirectory( gl )
add_subdirectory( fi )
add_subdirectory( nds )
add_subdirectory( fr )
add_subdirectory( ca@valencia )
add_subdirectory( ja )
add_subdirectory( ga )
add_subdirectory( tr )
add_subdirectory( el )
add_subdirectory( sr@latin )
add_subdirectory( da )
add_subdirectory( hi )
add_subdirectory( cs )
add_subdirectory( ar )
add_subdirectory( is )
add_subdirectory( et )
add_subdirectory( rw )
